2012-05-17  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* classProviderGz.c, httpAdapter.c, interopProvider.c,
	msgqueue.c, msgqueue.h, providerMgr.c:
	[ 3527674 ] Faster Startup

2012-05-16  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* control.c, msgqueue.c, msgqueue.h, sfcBroker.c:
	[ 2966659 ] Cleanup https daemon remnants

2012-05-14  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c, instance.c, internalProvider.c, queryOperation.h,
	queryStatement.c, result.c, 
	test/xmltest/InstanceTest25GetWithPropertyFilter.*:
	[ 3525651 ] CMSetPropertyFilter not CMPI 2.0 compliant
	(based on patch by Tyrel Datwyler)

2012-04-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* control.c, indCIMXMLHandler.c, interopServerProvider.c,
	sfcb.cfg.pre.in, test/TestProviders/tests/Makefile.am,
	test/TestProviders/tests/limitTest.sh:
	[ 3513390 ] Enforce LD and subscription limits
	(max for LD only)

2012-04-16  Narasimhma Sharoff  <nsharoff@us.ibm.com>

	* brokerOs.c, brokerUpc.c, native.h:
	[ 3517530 ] Implement mark, release routines in CMPIBrokerMemFT

2012-04-13  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* Makefile.am, cimRequest.c, httpAdapter.c, httpComm.c, providerDrv.c, 
	  providerMgr.c, sfcBroker.c, sfcb.cfg.pre.in, trace.c, trace.h:
	[ 3501314 ] Add dynamic logging and syslog output to sfcb trace
	(based on patch by Mike Lisanke)

2012-04-13 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3517573 ] Problem with SequenceContext migration

2012-04-13 Narasimha Sharoff <nsharoff@us.ibm.com>

	* httpAdapter.c, httpComm.c:
	[ 3516184 ] commClose close socket when file hndl is null

2012-04-10 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* ABTScript:
	[ 3516167 ] Force kill sfcbd on stop if needed

2012-04-09  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c:
	[ 3419721 ] reset CMPIValue buffer in str2CMPIValue

	* httpAdapter.c, sfcBasicPAMAuthentication.c: