@@ -1,0 +1,4 @@
+<PROPERTY NAME="FilterCreationEnabled" TYPE="boolean">
+<VALUE>TRUE</VALUE>
+</PROPERTY>
+</INSTANCE>
