@@ -103,6 +103,7 @@ Bugs Fixed:
 - 3516184 commClose close socket when file hndl is null
 - 3517573 Problem with SequenceContext migration
 - 3525651 CMSetPropertyFilter not CMPI 2.0 compliant
+- 3527693 Property filters don't work for enum upcalls
 
 Changes in 1.3.14
 =================
