@@ -1,5 +1,10 @@
 2012-05-17  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
+	* brokerUpc.c, 
+	test/xmltest/enumerateInstance_CIM_IndicationService-propertyFilter.*:
+	[ 3527693 ] Property filters don't work for enum upcalls
+	(patch by Tyrel Datwyler)
+
 	* classProviderGz.c, httpAdapter.c, interopProvider.c,
 	msgqueue.c, msgqueue.h, providerMgr.c:
 	[ 3527674 ] Faster Startup
